fixed color and z-index

--- a/app/collaborate/page.module.css
+++ b/app/collaborate/page.module.css
@@ -20,7 +20,7 @@
 	line-height: 1;
 	color: var(--yellow);
 	position: absolute;
-	z-index: 1;
+	z-index: 2;
 	bottom: 1rem;
 	left: 10px;
 	font-size: 5.5rem;
