--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 	--background: #ffffff;
 	--foreground: #171717;
 	--blue: #002855;
-	--yellow: #ffc72c;
+	--yellow: #FFA300;
 	--white: #fff;
 }
 
